# JaraboTransientRendering

./: .gitignore  CMakeLists.txt  INPUT.md  LICENSE  README.md
scenes_scripts/: script_render.sh
src/: bunnykiller.cpp  bunnykiller.h
src/Camera/: Camera.h  FiniteApertureCamera.h  LambertianCamera.h  OrthographicCamera.h  PinholeCamera.h  RadianceSensor.h
src/Color/: Color.h  FluorescentAttenuation.h  FluorescentMatrix.h  FluorescentPolarizedAttenuation.h  PolarizationFrame.h  PolarizedAttenuation.h  PolarizedSpectrum.h  Spectrum.h
src/DataStructures/: KDTree.h
src/DensityEstimation/: DensityEstimationKernel.h  VolumetricRadianceEstimators.h
src/Film/: Film.h  FilmComponents.h  KernelBasedStreakCameraFilm.h  MultibounceStreakCameraFilm.h  SamplesStreakCameraFilm.h  StreakCameraFilm.h
src/Filter/: BoxFilter.h  Filter.h  GaussianFilter.h  LanczosFilter.h  UberFilter.h
src/Geometry/: Instance.h  Object.h  ObjectPointer.h
src/Geometry/Aggregate/: Aggregate.h  BVH.h  Mesh.h
src/Geometry/Primitives/2D/: Circle.h  Line.h  Rectangle.h
src/Geometry/Primitives/3D/: Plane.h  Sphere.h  Triangle.h
src/Image/: Image.h  ImageIO.h  RGBColor.h  spectrum2rgb.h
src/Integrator/: BidirectionalPathTracing.h  Integrator.h  Particle.h  ParticleTracing.h  Path.h  PathMIS.h  PhotonEstimation.h  PhotonMapping.h  RadianceSample.h
src/Integrator/deprecated/: Albedo.h  Beam.h  BeamTracing.h  DensityEstimationKernel.h  DirectIntegrator.h  InstantRadiosity.h  Particle.h  ParticleTracing.h  PathTracing.h  Photon.h  PhotonBeams.h  PhotonEstimation.h  PhotonMapping.h  SingleScatteringIntegrator.h  SurfaceIntegrator.h  TerminationCriteria.h  TwoBounceIntegrator.h  VirtualRayLights.h  VolumeIntegrator.h  VolumePathTracing.h
src/LightSource/: CosineLightSource.h  DirectionalLightSource.h  HemisphericalLightSource.h  LightSample.h  LightSource.h  PointLightSource.h  RectangularAreaLightSource.h  SpotLightSource.h
src/LinearAlgebra/: MatrixN.h  Vector2.h  Vector3.h  VectorN.h
src/Material/: Birefringence.h  Emission.h  Fluorescent.h  FluorescentTrue.h  FresnelConductor.h  FresnelDielectric.h  LambertianTextured.h  Material.h  Transparent.h  TwoSided.h  UberMaterial.h
src/Material/Reflectance/: BSDF.h  Fresnel.h  FresnelDielectric.h  Lambertian.h  Phong.h  Reflectance.h  Specular.h  Transmissive.h  Ward.h
src/Material/Texture/: BTF.h  BTFMipMap.h  Texture.h
src/Media/: HomogeneousMedium.h  Medium.h  WoodcockTracking.h
src/Media/PhaseFunction/: HenyeyGreensteinPhaseFunction.h  IsotropicPhaseFunction.h  PhaseFunction.h  RayleighPhaseFunction.h  TabulatedPhaseFunction.h
src/RayTracing/: AABB.h  Intersection.h  Ray.h  RayTraceDirection.h  World.h
src/Renderer/: RenderEngine.h  TransientRenderer.h
src/Sampling/: Sample.h  Sampler.h  Sampling.h  SamplingTechniques.h  StratifiedSampler.h
src/Sampling/Distributions/: ConstantDistribution.h  LinearDistribution.h  TabulatedDistribution.h
src/Utils/: Filesystem.h  ProgramParams.h  RandomNumbers.h  Timer.h  Utils.h
src/Utils/Loader/: LoaderSVG.h
